# C_task2

./: Building.cpp  Building.h  CMakeLists.txt  ConstructionManager.cpp  ConstructionManager.h  Controller.cpp  Controller.h  README.md  main.cpp
Interfaces/: Architector.cpp  Architector.h  Builder.cpp  Builder.h  IWorker.cpp  IWorker.h  Ingener.cpp  Ingener.h
include/: ConstructionManager.h  Controller.h
include/Interfaces/: Ingener.h
src/: Architector.cpp  Builder.cpp  Building.cpp  ConstructionManager.cpp  Controller.cpp  IWorker.cpp  Ingener.cpp  main.cpp
tests/: CMakeLists.txt  ConstructionManager_test.cpp  building_test.cpp
